# kaori

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: check-install.yaml  doxygenate.yaml  run-tests.yaml
cmake/: Config.cmake.in
docs/: BarcodePool_8hpp.html  BarcodePool_8hpp_source.html  BarcodeSearch_8hpp.html  BarcodeSearch_8hpp_source.html  CombinatorialBarcodesPairedEnd_8hpp.html  CombinatorialBarcodesPairedEnd_8hpp_source.html  CombinatorialBarcodesSingleEnd_8hpp.html  CombinatorialBarcodesSingleEnd_8hpp_source.html  ConstantTemplate_8hpp.html  ConstantTemplate_8hpp_source.html  Doxyfile  DualBarcodesPairedEndWithDiagnostics_8hpp.html  DualBarcodesPairedEndWithDiagnostics_8hpp_source.html  DualBarcodesPairedEnd_8hpp.html  DualBarcodesPairedEnd_8hpp_source.html  DualBarcodesSingleEndWithDiagnostics_8hpp.html  DualBarcodesSingleEndWithDiagnostics_8hpp_source.html  DualBarcodesSingleEnd_8hpp.html  DualBarcodesSingleEnd_8hpp_source.html  DualBarcodesWithDiagnostics_8hpp.html  DualBarcodesWithDiagnostics_8hpp_source.html  DualBarcodes_8hpp.html  DualBarcodes_8hpp_source.html  FastqReader_8hpp.html  FastqReader_8hpp_source.html  MismatchTrie_8hpp.html  MismatchTrie_8hpp_source.html  RandomBarcodeSingleEnd_8hpp.html  RandomBarcodeSingleEnd_8hpp_source.html  ScanTemplate_8hpp.html  ScanTemplate_8hpp_source.html  SequenceSet_8hpp.html  SequenceSet_8hpp_source.html  SimpleSingleMatch_8hpp.html  SimpleSingleMatch_8hpp_source.html  SingleBarcodePairedEnd_8hpp.html  SingleBarcodePairedEnd_8hpp_source.html  SingleBarcodeSingleEnd_8hpp.html  SingleBarcodeSingleEnd_8hpp_source.html  VariableLibrary_8hpp.html  (+206 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  enums_0.js  enums_1.js  files_0.js  files_1.js  files_2.js  files_5.js  files_6.js  files_7.js  (+44 more)
include/kaori/: BarcodePool.hpp  BarcodeSearch.hpp  ConstantTemplate.hpp  ExactLibrary.hpp  FastqReader.hpp  MatchSequence.hpp  MismatchLibrary.hpp  MismatchTrie.hpp  ScanTemplate.hpp  SequenceSet.hpp  SimpleSingleMatch.hpp  ThreadPool.hpp  VariableLibrary.hpp  kaori.hpp  process_data.hpp  utils.hpp
include/kaori/handlers/: CombinatorialBarcodes.hpp  CombinatorialBarcodesPairedEnd.hpp  CombinatorialBarcodesSingleEnd.hpp  DualBarcodes.hpp  DualBarcodesPairedEnd.hpp  DualBarcodesPairedEndWithDiagnostics.hpp  DualBarcodesSingleEnd.hpp  DualBarcodesSingleEndWithDiagnostics.hpp  DualBarcodesWithDiagnostics.hpp  RandomBarcodeSingleEnd.hpp  SingleBarcodePairedEnd.hpp  SingleBarcodeSingleEnd.hpp
tests/: CMakeLists.txt
tests/src/: BarcodeSearch.cpp  ConstantTemplate.cpp  FastqReader.cpp  MatchSequence.cpp  MismatchTrie.cpp  ScanTemplate.cpp  SimpleSingleMatch.cpp  VariableLibrary.cpp  process_data.cpp  utils.h
tests/src/handlers/: CombinatorialBarcodes.cpp  CombinatorialBarcodesPairedEnd.cpp  CombinatorialBarcodesSingleEnd.cpp  DualBarcodes.cpp  DualBarcodesPairedEnd.cpp  DualBarcodesPairedEndWithDiagnostics.cpp  DualBarcodesSingleEnd.cpp  DualBarcodesSingleEndWithDiagnostics.cpp  DualBarcodesWithDiagnostics.cpp  RandomBarcodeSingleEnd.cpp  SingleBarcodePairedEnd.cpp  SingleBarcodeSingleEnd.cpp
